# runbook

./: .gitignore  .pre-commit-config.yaml  .release-it.json  404.html  CHANGELOG.md  Justfile  NOTES.html  NOTES.md  PERFORMANCE.html  PERFORMANCE.md  README.html  README.md  TESTING.md  cli.html  deno.json  genindex.html  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  search.html  searchindex.js
.config/: README.md.template  templating.sh
.github/workflows/: main.yml
_sources/: NOTES.md.txt  README.md.txt  cli.rst.txt  index.rst.txt
docs/: NOTES.md  PERFORMANCE.md  conf.py  index.md  index.rst
ext/deno/runbook/: deno.json  log.ts  mod.ts  secrets.ts  shell.d.ts  shell.ts  shell_test.ts
ext/deno/runbook/secrets/: aws_parameter_store.ts  one_password_cli.ts
runbook/: __init__.py  add_prompt_preprocessor.py  constants.py  nb.py  notifications.py  shell.py  template.py  template_builder.py
runbook/cli/: __init__.py  completions.py  lib.py  validators.py
runbook/cli/commands/: __init__.py  check.py  convert.py  create.py  diff.py  edit.py  export.py  init.py  list.py  plan.py  review.py  run.py  show.py  version.py
runbook/data/: _template-deno.ipynb  _template-python.ipynb
runbook/nbconvert/templates/mdaudit/: index.md.j2
runbooks/: 2024-01-15-main-operation.ipynb  Untitled.md  Untitled1.ts  Untitled3.ipynb  _template.ipynb  executed-Untitled3.ipynb
runbooks/binder/: _template-deno.ipynb  _template-python.ipynb
search/: search_index.json
src/runbook/: nb.py  shell.py  template.py
src/runbook/cli/: __init__.py
tests/: cli_test.py  cli_test.ts
tests/__snapshots__/: cli_test.ts.snap
tests/fixtures/prompters/: echoer  interactive-prompter.ts
tests/manual/: 01_edit.sh  02_run.sh
