[project]
name = "runbook"
# Managed via runbook.__version__ and https://pypi.org/project/poetry-version-plugin/
version = "0"
description = "Runbook lib and cli"
requires-python = ">=3.11"
authors = [
  { name = "Zander Hill", email = "zander@xargs.io" },
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
shx = "^0.4.2"
rich = "^13.9.4"
# papermill = "^2.5.0"
# Used until upstreaming typescript into papermill
papermill = { git = "https://github.com/zph/papermill", branch = "main" }
jupyter = "^1.0.0"
click = "^8.1.7"
bash-kernel = "^0.9.3"
jupyterlab-execute-time = "^3.1.0"
jupytext = "^1.16.1"
nbformat = "^5.9.2"
nbconvert = "^7.14.1"
pyyaml = "^6.0.1"
traitlets = "^5.14.1"
ipywidgets = "^8.1.1"
pre-commit = "^3.6.0"
python-ulid = "^2.2.0"
slack-sdk = "^3.26.2"
jupyterlab = "^4.1.5"
nbdime = "^4.0.1"
questionary = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pandas = "^2.1.4"
pyarrow = "^14.0.2"
matplotlib = "^3.8.2"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.poetry.scripts]
runbook = "runbook.cli:cli"
# For the sake of installation accessibility for deno notebooks
jupyter = "jupyter_core.command:main"

[tool.poetry-version-plugin]
source = "init"

# https://github.com/python-poetry/poetry/issues/927
# [tool.poetry.plugins."papermill.translators"]
# "typescript" = "translators:runbook.translators.TypescriptTranslator"
